--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ main {
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     grid-row-gap: 3px;
-    background: center / contain no-repeat url(/media/background.jpg);
+    background: center / contain no-repeat url(media/background.jpg);
 }
 .white {
     width: 100px;
